--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,7 @@
     "font-awesome": "^4.5.0",
     "tangram": "^0.6.2",
     "polyglot": "^1.0.0",
-    "leaflet": "^0.7.7",
+    "leaflet": "^1.0.0-beta.2",
     "leaflet-hash": "*",
     "keymaster": "^1.6.3",
     "wikidata-sdk": "^2.0.0",
