--- a/src/scenes/sceneslist.yaml
+++ b/src/scenes/sceneslist.yaml
@@ -27,6 +27,19 @@ scenes:
                 - -13.2369
             zoom: 14
 
+    reliefandredroads:
+       group: California
+       name: Relief and Red Roads
+       file: scenes/reliefandredroads.yaml
+       defaultlocation: [33.9800, -118.1726, 11]
+       locations:
+          -
+            title: Los Angeles
+            latlng:
+                - 33.9800
+                - -118.1726
+            zoom: 11
+            
     cinnabar:
         group: Mapzen Demos
         name: Cinnabar
