--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "grunt-contrib-jshint": "~1.0.0",
     "grunt-contrib-nodeunit": "~0.4.1",
+    "uglify-js": "git://github.com/mishoo/UglifyJS2.git#harmony",
     "grunt-contrib-uglify": "~1.0.1",
     "grunt": "~0.4.5",
     "grunt-contrib-copy": "~1.0.0",
