Updated a few bower libraries

--- a/bower.json
+++ b/bower.json
@@ -21,11 +21,11 @@
   "dependencies": {
     "handlebars": "^4.0.5",
     "requirejs": "^2.2.0",
-    "jquery": "^2.2.3",
+    "jquery": "^2.2.4",
     "font-awesome": "^4.6.0",
-    "tangram": "^0.7.0",
+    "tangram": "^0.7.2",
     "polyglot": "^2.0.0",
-    "leaflet": "^1.0.0-beta.2",
+    "leaflet": "^1.0.0-rc.1",
     "leaflet-hash": "*",
     "keymaster": "^1.6.3",
     "wikidata-sdk": "^2.0.0",
@@ -35,13 +35,13 @@
     "Leaflet.VisualClick": "^1.1.0",
     "sidebar-v2": "^0.3.0",
     "underscore": "^1.8.3",
-    "postal.js": "^1.0.8",
+    "postal.js": "^1.0.11",
     "requirejs-promised": "^0.1.0",
-    "js-cookie": "^2.1.1",
+    "js-cookie": "^2.1.2",
     "PACE": "pace#^1.0.2",
     "opentip": "^2.4.6"
   },
   "resolutions": {
-    "jquery": "^2.2.3"
+    "jquery": "^2.2.4"
   }
 }
